@@ -32,7 +32,7 @@
 #define EVALUATOR_H
 
 #include "dmcs/AbstractContext.h"
-#include "network/ConcurrentMessageQueue.h"
+#include "network/NewConcurrentMessageDispatcher.h"
 
 namespace dmcs {
 
@@ -41,39 +41,45 @@ class Instantiator;
 class Evaluator
 {
 public:
-	// theory is accessed via inst
-	// (derived classes can cache it here for better performance)
-  Evaluator(/*const TheoryPtr& t, */const InstantiatorWPtr& inst);
+  Evaluator(const InstantiatorWPtr& inst,
+	    const NewConcurrentMessageDispatcherPtr d);
 
-	virtual
-  ~Evaluator();
-
-	// can be nonvirtual
-	// should never be overridden (final)
-  ConcurrentMessageQueue*
+  virtual ~Evaluator();
+  
+  // can be nonvirtual
+  // should never be overridden (final)
+  std::size_t
   getInQueue();
 
-	// can be nonvirtual
-	// should never be overridden (final)
-  ConcurrentMessageQueue*
+  // can be nonvirtual
+  // should never be overridden (final)
+  std::size_t
   getOutQueue();
 
-	// this starts the evaluator thread
-	// 
-	// perhaps (after implementing 2 or 3 different contexts)
-	// we will do the thread here and make some other low-level functionality virtual
-	// (I would let this be here for now, as we don't have much experience with
-	// implementing such contexts yet)
-	virtual void
-  solve() = 0;
+  void
+  operator()();
 
-private:
-  //TheoryPtr theory; see Instantiator.h why this should not be specified here
+protected:
+  // this starts the evaluator thread
+  // 
+  // perhaps (after implementing 2 or 3 different contexts)
+  // we will do the thread here and make some other low-level functionality virtual
+  // (I would let this be here for now, as we don't have much experience with
+  // implementing such contexts yet)
+  virtual void
+  solve(NewBeliefState* heads) = 0;
+
+protected:
   InstantiatorWPtr instantiator;
-  ConcurrentMessageQueue* in_queue;
-  ConcurrentMessageQueue* out_queue;
+  NewConcurrentMessageQueueDispatcherPtr md;
+  std::size_t in_queue;                      // id to the ConcurrentMessageQueue provided by the MessageDispatcher
+  std::size_t out_queue;
 };
 
 } // namespace dmcs
 
 #endif // EVALUATOR_H
+
+// Local Variables:
+// mode: C++
+// End:
